# LibRoukaVici

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.bak  Doxyfile  Makefile  README.md  cmake_install.cmake  saveWindowsBins.bat  test.txt
include/: DebugCallback.h  RoukaVici.hh  RoukaViciAPI.h
src/: .#BTManager.cpp  .#RoukaVici.cpp  .#RoukaVici.hh  BTManager.cpp  BTManager.hh  Debug.cpp  Debug.hh  DebugCallback.h  Deprecated.h  DeviceManager.hh  GroupManager.cpp  GroupManager.hh  LibUsb.cpp  LibUsb.hh  ManagerFactory.cpp  ManagerFactory.hh  Packet.cpp  Packet.hh  RawManager.cpp  RawManager.hh  RoukaLock.cpp  RoukaLock.hh  RoukaVici.cpp  RoukaVici.hh  RoukaViciAPI.cpp  RoukaViciAPI.h  TCPManager.cpp  TCPManager.hh  TextManager.cpp  TextManager.hh  USBManager.cpp  USBManager.hh  VibrationGroup.cpp  VibrationGroup.hh  deviceManagerDestructors.cpp  exported.cpp  exported.hh  exported.hpp  mylibusb.h
src/exported/: RoukaViciAPI.h.bak
test/: .#main.cpp  BT.cpp  Callback.cpp  Groups.cpp  Thread1.cpp  Thread3.cpp  cAPI.cpp  cAPI_win.cpp  dlopen.cpp  interactive.cpp  main.cpp  maincpp.cpp  tests.cpp
toolchain/: mingw64.cmake
